--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
       - run: mkdir -p "${GOPATH_BASE}"
       - run: mkdir -p "${GOPATH_HEAD}/bin"
       - run: go get github.com/govend/govend
+      - run: echo "$DOCKER_REPO"
       #- run: ln -fs "${HOME}/${CIRCLE_PROJECT_REPONAME}" "${GOPATH_BASE}/"
           
           
